kubernetes/apps/rook-ceph/cluster/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-rgw-ceph-objectstore-lb
  annotations:
    lbipam.cilium.io/ips: 10.10.10.11
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/bgp-control-plane
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app.kubernetes.io/name: ceph-rgw
    app.kubernetes.io/instance: ceph-objectstore
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
