kubernetes/apps/rook-ceph/cluster/app/httproute.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-rgw-s3
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  hostnames:
    - s3.kantai.xyz
    - "*.s3.kantai.xyz"
  rules:
    - backendRefs:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
